--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws": "0.0.3-2",
     "aws-amplify": "^1.1.40",
+    "aws-cli-js": "^2.0.6",
     "react": "^16.10.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.10.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-stripe-elements": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
